deployment/nodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-api
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"ports": {"3001":"nodejs-backendconfig"}}'
spec:
  type: NodePort
  selector:
    app: nodejs-sample
  ports:
    - name: http
      port: 3001
      protocol: TCP
      targetPort: 3000
